@@ -1,3 +1,7 @@
+2020-12-25  Robby Stephenson  <robby@periapsis.org>
+
+	* Improved template refresh on palette or color change.
+
 2020-12-13  Robby Stephenson  <robby@periapsis.org>
 
 	* Switched to use QWebEngine over KHTML by default, when available.
